add delete button

--- a/views/edit_word.erb
+++ b/views/edit_word.erb
@@ -7,6 +7,12 @@
   <input id="str" name="str" type="text">
 
   <button type="submit">Update</button>
-</form>
+
 
 <p><a href="/words">Return to word list</a><p>
+
+<form action="/words/<% @word.id() %>" method="post">
+  <input name="_method" type="hidden" value="delete">
+  
+  <button type="submit">Delete word</button>
+</form>
