--- a/views/edit_word.erb
+++ b/views/edit_word.erb
@@ -7,6 +7,7 @@
   <input id="str" name="str" type="text">
 
   <button type="submit">Update</button>
+  </form>
 
 
 <p><a href="/words">Return to word list</a><p>
