--- a/views/edit_word.erb
+++ b/views/edit_word.erb
@@ -1,4 +1,8 @@
-<h1>Update <%= @word.str() %></h1>
+<div class="container">
+  <div class="jumbotron">
+    <h2><%= @word.str() %></h2>
+  </div>
+</div>
 
 <form action="/words/<%= @word.id() %>" method="post">
   <input name="_method" type="hidden" value="patch">
@@ -8,12 +12,15 @@
 
   <button type="submit">Update</button>
 </form>
-
+<br>
 
 <p><a href="/words">Return to word list</a><p>
+<br>
 
 <form action="/words/<%= @word.id() %>" method="post">
   <input name="_method" type="hidden" value="delete">
   
+  <h4>Do you want to delete?</h4>
+
   <button type="submit">Delete</button>
 </form>
