add search input

--- a/views/words.erb
+++ b/views/words.erb
@@ -22,3 +22,12 @@
   <% end %>
 <br>
   <a href="/words/new">Add a new word</a>
+<br>
+<br>
+<form action="/results" method="post"> 
+  <div class="form-group">
+    <label for="search">Search</label>
+    <input id="search" name="search" class="form-control" type="text">
+  </div>
+  <button type="submit" class="btn">Go!</button>
+</form>
