--- a/views/words.erb
+++ b/views/words.erb
@@ -6,8 +6,8 @@
 </div>
 
 <p>Let's play a game!<p>
-<p>- Add a word and definition</p>
-<p>- You can edit or delete a word and definition</p>
+<p>- Add, edit or delete a word and definition</p>
+<p>- Try searching for a word</p>
 <br>
 <h3>Available Words</h3>
 
