--- a/views/new_word.erb
+++ b/views/new_word.erb
@@ -1,4 +1,8 @@
-<h1>Create a new word</h1>
+<div class="container">
+  <div class="jumbotron">
+<h2>Create a new word</h2>
+  </div>
+</div>
 
 <form action="/words" method="post">
   <div class="form-group">
